--- a/app/src/main/res/layout/viewholder_pull_request.xml
+++ b/app/src/main/res/layout/viewholder_pull_request.xml
@@ -54,6 +54,7 @@
         android:layout_marginLeft="@dimen/default_material_screen_edge_margin"
         android:layout_marginTop="@dimen/default_margin"
         android:layout_marginBottom="@dimen/default_margin"
+        android:contentDescription="@string/pull_request_user_photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pull_text_view_description" />
