--- a/app/src/main/res/layout/fragment_pull_requests.xml
+++ b/app/src/main/res/layout/fragment_pull_requests.xml
@@ -13,10 +13,11 @@
 		android:text="@string/no_pull_requests"
 		style="@style/AppTheme"
 		android:layout_margin="@dimen/default_material_screen_edge_margin"
+		android:gravity="center"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:visibility="gone"
-		tools:visibility="gone"
+		tools:visibility="visible"
 		/>
 	<ProgressBar
 		android:id="@+id/progressBar"
